[package]
name = "exercise"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "arrays"
path = "src/arrays.rs"

[[bin]]
name = "health_stats"
path = "src/health_stats.rs"

[[bin]]
name = "points"
path = "src/points.rs"
