[package]
name = "exercise"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "arrays"
path = "src/arrays.rs"

[[bin]]
name = "health_stats"
path = "src/health_stats.rs"

[[bin]]
name = "points"
path = "src/points.rs"

[[bin]]
name = "luhn"
path = "src/luhn.rs"

[[bin]]
name = "traits"
path = "src/traits.rs"

[[bin]]
name = "drop"
path = "src/drop.rs"

[[bin]]
name = "default"
path = "src/default.rs"

[[bin]]
name = "gui"
path = "src/gui.rs"

[[bin]]
name = "rawpointers"
path = "src/rawpointers.rs"

[[bin]]
name = "ffiwrapper"
path = "src/ffiwrapper.rs"
