[package]
name = "exercise"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "arrays"
path = "src/arrays.rs"

[[bin]]
name = "health_stats"
path = "src/health_stats.rs"

[[bin]]
name = "points"
path = "src/points.rs"

[[bin]]
name = "luhn"
path = "src/luhn.rs"

[[bin]]
name = "3traits"
path = "src/3traits.rs"

[[bin]]
name = "3gui"
path = "src/3gui.rs"

[[bin]]
name = "3drop"
path = "src/drop.rs"

[[bin]]
name = "3default"
path = "src/3default.rs"

[[bin]]
name = "3rawpointers"
path = "src/3rawpointers.rs"

[[bin]]
name = "3ffiwrapper"
path = "src/3ffiwrapper.rs"

[[bin]]
name = "4threads"
path = "src/4threads.rs"

[[bin]]
name = "4channels"
path = "src/4channels.rs"

[[bin]]
name = "4channels_unbounded"
path = "src/4channels_unbounded.rs"

[[bin]]
name = "4channels_bounded"
path = "src/4channels_bounded.rs"

[[bin]]
name = "4arc"
path = "src/4arc.rs"

[[bin]]
name = "4mutex"
path = "src/4mutex.rs"

[[bin]]
name = "4shared_state_example"
path = "src/4shared_state_example.rs"

[[bin]]
name = "4dining_philosophers"
path = "src/4dining_philosophers.rs"
